<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="465dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edt_nick"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edt_Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <EditText
            android:id="@+id/editTextContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edt_contraseña"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#d50000"
            android:text="@string/bt_registro"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonVolverInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#9b0000"
            android:text="@string/bt_volverInicio"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>