<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        app:lottie_autoPlay="true"
        app:lottie_fileName="dialogo.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textViewPuntosObtenidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txt_PuntuacionFinal"
        android:textColor="#B50000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationView"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <TextView
        android:id="@+id/textViewRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_Record"
        android:textColor="#9b0000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewPuntosObtenidos"
        app:layout_constraintStart_toStartOf="@+id/textViewPuntosObtenidos"
        app:layout_constraintTop_toBottomOf="@+id/textViewPuntosObtenidos">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/txt_gameOver"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/animationView"
        app:layout_constraintEnd_toEndOf="@+id/animationView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/animationView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>